--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           
           <!-- first card -->
           <div class="card  p-6 bg-base-300 shadow-xl">
-            <figure><img src="./images/tea-1.png" alt="Black tea" /></figure>
+            <figure><img class="hover:rotate-90" src="./images/tea-1.png" alt="Black tea" /></figure>
             <div class="card-body text-center">
               <h2 class="text-2xl font-bold">Milk Tea</h2>
               <p>Creamer could be replaced by fresh milk</p>
@@ -119,7 +119,7 @@
       </section>
 
 
-      
+
 
     </main>
 
