--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     </header>
 
     <main class="container mx-auto">
-<!-- featured section -->
+
+
+    <!-- featured section -->
       <section class="pt-28">
         <div class="text-center">
           <h2 class="text-5xl mb-10">Our Featured Products</h2>
@@ -119,6 +121,21 @@
       </section>
 
 
+      <!-- Great Tea -->
+      <section>
+        <div>
+
+        </div>
+
+        <div class="space-y-5">
+          <h3 class="text-5xl font-bold">Great Tea, Freshly <br> Presented</h3>
+          <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h4 class="text-xl font-bold">Unique Taste</h4>
+          <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h5 class="text-xl font-bold">Premium Quality</h5>
+          <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+      </section>
 
 
     </main>
