--- a/index.html
+++ b/index.html
@@ -122,12 +122,24 @@
 
 
       <!-- Great Tea -->
-      <section>
-        <div>
+      <section class="my-24  gap-12 flex flex-col lg:flex-row">
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+          
+          <div class="rounded-xl h-36 bg-gradient-to-r from-sky-500 to-indigo-500">Hello</div>
+          <div class="row-span-2 bg-[#E6A6231A] px-8 py-10  flex justify-center items-center">
+            <img src="./images/fresh-1.png" alt="">
+          </div>
 
+
+      
+          <div class="row-span-2 bg-[#E6A6231A] px-8 py-10  flex justify-center items-center">
+            <img src="./images/fresh-2.png" alt="">
+          </div>
+
+          <div class="rounded-xl h-36 bg-gradient-to-r from-sky-500 to-indigo-500"></div>
         </div>
 
-        <div class="space-y-5">
+        <div class="space-y-8 flex-1">
           <h3 class="text-5xl font-bold">Great Tea, Freshly <br> Presented</h3>
           <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
           <h4 class="text-xl font-bold">Unique Taste</h4>
