--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
           </div>
 
           <!-- review -->
-          <div class="p-10 bg-white rounded-xl">
-            <img src="./images/client.png" alt="">
+          <div class="p-10 relative bg-white rounded-xl">
+            <img class="absolute -left-5 -top-5" src="./images/client.png" alt="">
             <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-            <h4 class="font-bold">Ilham Yuda</h4>
+            <h4 class="font-bold mt-4">Ilham Yuda</h4>
             <p class="font-medium">Businessman</p>
 
           </div>
