--- a/index.html
+++ b/index.html
@@ -159,18 +159,24 @@
                                 bg-gradient-to-r from-[#FF8938] to-[#F00]  
                                   px-16 
                                     py-24">
-          <div class="space-y-8">
+          <div class="space-y-8 ">
             <h2 class="text-5xl text-white font-extrabold">Meet Our Super <br> Clients</h2>
             <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
           <button class="bg-yellow-500 rounded-xl px-6 py-2">Show All</button>
           </div>
 
           <!-- review -->
-          <div class="p-10 relative bg-white rounded-xl">
-            <img class="absolute -left-5 -top-5" src="./images/client.png" alt="">
+          <div class="p-10 h-60 relative bg-white rounded-xl ">
+            <img class="absolute -left-5 -top-5 border-4 border-white rounded-full  bg-white" src="./images/client.png" alt="">
+
+
             <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
             <h4 class="font-bold mt-4">Ilham Yuda</h4>
             <p class="font-medium">Businessman</p>
+            
+            <div class="flex justify-end">
+              <img  src="./images/circles.png" alt="">
+            </div>
 
           </div>
       </section>
