--- a/index.html
+++ b/index.html
@@ -204,6 +204,55 @@
           </div>
       </section>
 
+<!-- news and event section -->
+      <section>
+        <div>
+          <div class="text-center ">
+            <h1 class="text-5xl py-5 ">News & Events</h1>
+            <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+          </div>
+        </div>
+
+        <div class="py-10 lg:flex justify-center gap-8">
+          <div class="card card-compact  bg-base-100 shadow-xl border-2 border-[#D2D2D2] pt-4">
+            <figure><img src="./images/news-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+
+              <p class="text-[#777]">Feb 05, 2027</p>
+              <h3 class="card-title">Collecting 8 points for <br> discount</h3>
+              <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+              <h4>Learn More</h4>
+            </div>
+          </div>
+          <div class="card card-compact  bg-base-100 shadow-xl border-2 border-[#D2D2D2] pt-4">
+            <figure><img src="./images/news-2.png" alt="Shoes" /></figure>
+            <div class="card-body">
+
+              <p class="text-[#777]">Feb 05, 2027</p>
+              <h3 class="card-title">Collecting 8 points for <br> discount</h3>
+              <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+              <h4>Learn More</h4>
+            </div>
+          </div>
+          <div class="card card-compact bg-base-100 shadow-xl border-2 border-[#D2D2D2] pt-4">
+            <figure><img src="./images/news-3.png" alt="Shoes" /></figure>
+            <div class="card-body">
+
+              <p class="text-[#777]">Feb 05, 2027</p>
+              <h3 class="card-title">Collecting 8 points for <br> discount</h3>
+              <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+              <h4>Learn More</h4>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+
+      <footer>
+
+      </footer>
     </main>
 
 
