--- a/index.html
+++ b/index.html
@@ -218,30 +218,30 @@
             <figure><img src="./images/news-1.png" alt="Shoes" /></figure>
             <div class="card-body">
 
-              <p class="text-[#777]">Feb 05, 2027</p>
-              <h3 class="card-title">Collecting 8 points for <br> discount</h3>
-              <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
-              <h4>Learn More</h4>
+              <p class="text-[#777] pl-8">Feb 05, 2027</p>
+              <h3 class="card-title pl-8">Collecting 8 points for <br> discount</h3>
+              <p class="text-[#777] pl-8">There are many variations of passages of Lorem Ipsum available.</p>
+              <h4 class="pl-8">Learn More</h4>
             </div>
           </div>
           <div class="card card-compact  bg-base-100 shadow-xl border-2 border-[#D2D2D2] pt-4">
             <figure><img src="./images/news-2.png" alt="Shoes" /></figure>
             <div class="card-body">
 
-              <p class="text-[#777]">Feb 05, 2027</p>
-              <h3 class="card-title">Collecting 8 points for <br> discount</h3>
-              <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
-              <h4>Learn More</h4>
+              <p class="text-[#777] pl-8">Feb 05, 2027</p>
+              <h3 class="card-title pl-8">Collecting 8 points for <br> discount</h3>
+              <p class="text-[#777] pl-8">There are many variations of passages of Lorem Ipsum available.</p>
+              <h4 class="pl-8">Learn More</h4>
             </div>
           </div>
           <div class="card card-compact bg-base-100 shadow-xl border-2 border-[#D2D2D2] pt-4">
             <figure><img src="./images/news-3.png" alt="Shoes" /></figure>
             <div class="card-body">
 
-              <p class="text-[#777]">Feb 05, 2027</p>
-              <h3 class="card-title">Collecting 8 points for <br> discount</h3>
-              <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
-              <h4>Learn More</h4>
+              <p class="text-[#777] pl-8">Feb 05, 2027</p>
+              <h3 class="card-title pl-8">Collecting 8 points for <br> discount</h3>
+              <p class="text-[#777] pl-8">There are many variations of passages of Lorem Ipsum available.</p>
+              <h4 class="pl-8">Learn More</h4>
             </div>
           </div>
         </div>
@@ -250,8 +250,52 @@
 
 
 
-      <footer>
+      <footer class="p-32 bg-base-200 text-base-content">
+        <div class="pb-24 flex justify-between">
+          <img src="./images/footerLogo.png" alt="">
+          <div class="flex items-center gap-4">
+            <h5>Ready to get strated?</h5>
+            <button class="bg-[#F00] rounded-md w-40 h-12">Get Started</button>
+          </div>
+        </div>
+        <div class="footer  ">
+          <div>
+            <header class="footer-title text-black">Quick Links</header> 
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">About Us</a>
+            <a class="link link-hover">Insurance</a>
+            <a class="link link-hover">Privacy Policy</a>
+          </div> 
+          <div>
+            <header class="footer-title">Our Services</header> 
+            <a class="link link-hover">Life Insurance</a>
+            <a class="link link-hover">Car Insurance</a>
+            <a class="link link-hover">Health Insurance</a>
+            <a class="link link-hover">House Insurance</a>
+          </div> 
+          <div>
+            <header class="footer-title">Help</header> 
+            <a class="link link-hover">FAQs</a>
+            <a class="link link-hover">Contact Us</a>
+          </div> 
+          
+          <form>
+            <header class="footer-title">Newsletter</header> 
+            <fieldset class="form-control w-80">
+              <label class="label">
+                <span class="label-text">Enter your email address</span>
+              </label> 
+              <div class="join">
+                <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
+                <button class="btn btn-primary join-item">Subscribe</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
 
+        <aside>
+          <p class="text-center p-20">Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </aside>
       </footer>
     </main>
 
